<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/layers_header"
        android:key="general_header">
        <SwitchPreference
            android:defaultValue="false"
            android:key="incident_layer_sp"
            android:summary="@string/incident_layer_summary"
            android:summaryOff="@string/incident_layer_off"
            android:summaryOn="@string/incident_layer_on"
            android:title="@string/incident_layer_title"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="traffic_layer_sp"
            android:summary="@string/traffic_layer_summary"
            android:summaryOff="@string/incident_layer_off"
            android:summaryOn="@string/incident_layer_on"
            android:title="@string/traffic_layer_title"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="add_users_sp"
            android:summary="@string/traffic_layer_summary"
            android:summaryOff="@string/incident_layer_off"
            android:summaryOn="@string/incident_layer_on"
            android:title="@string/add_users_title"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/general_header"
        android:key="general_header">
    <SwitchPreference
        android:defaultValue="true"
        android:key="posi_layer_sp"
        android:summaryOff="@string/my_location_no"
        android:summaryOn="@string/my_location_yes"
        android:title="@string/my_location_search"
        />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/routing_header"
        android:key="routing_header">
        <ListPreference
            android:defaultValue="Safest"
            android:entries="@array/mode_value"
            android:entryValues="@array/mode_value"
            android:key="route_mode_lp"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/route_mode_name"
            android:summary="Safest"
            />
        <ListPreference
            android:defaultValue="Driving"
            android:entries="@array/transit_value"
            android:entryValues="@array/transit_value"
            android:key="route_transit_lp"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/route_transit_name"
            android:summary="Driving"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:key="route_stop_sw"
            android:summary="@string/route_stops_true"
            android:summaryOff="@string/route_stops_false"
            android:summaryOn="@string/route_stops_true"
            android:title="@string/route_stops_name"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:key="route_stop_first_sw"
            android:summary="@string/route_stops_true"
            android:summaryOff="@string/route_stops_false"
            android:summaryOn="@string/route_stops_true"
            android:title="@string/route_stop_first_name"
            />
        <SwitchPreference
            android:defaultValue="true"
            android:key="route_stop_last_sw"
            android:summary="@string/route_stops_true"
            android:summaryOff="@string/route_stops_false"
            android:summaryOn="@string/route_stops_true"
            android:title="@string/route_stop_last_name"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="route_cur_incident_sw"
            android:summary="@string/route_stops_true"
            android:summaryOff="@string/route_stops_false"
            android:summaryOn="@string/route_stops_true"
            android:title="@string/route_cur_incident"
            />


    </PreferenceCategory>
</PreferenceScreen>
